--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Why I want to become a developer?</h1>
-	<p>because i can learn how to create website</p>
+	<p>I am interseted in solving the real world problem by coding</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
